--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -14,14 +15,20 @@ select {
 
 .app.dark {
   --bg-color: #0e0e75;
+  --inverted-bg-color: #e8e8ea;
   --primary-color: #049604;
   --secondary-color: #04ff04;
+  --inverted-primary-color: #0232c2;
+  --inverted-secondary-color: #0449e0;
 }
 
 .light {
   --bg-color: #e8e8ea;
+  --inverted-bg-color: #0e0e75;
   --primary-color: #0232c2;
   --secondary-color: #0449e0;
+  --inverted-primary-color: #049604;
+  --inverted-secondary-color: #04ff04;
 }
 
 :root {
@@ -32,6 +39,10 @@ select {
   --font-size-l: 24px;
   --font-line-l: 32px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+  /* Размеры  */
+  --navbar-height: 50px;
+  --sidebar-width:300px;
+  --sidebar-width-collapsed:80px ;
 }
 
 .app {
@@ -39,4 +50,13 @@ select {
   background: var(--bg-color);
   color: var(--primary-color);
   min-height: 100vh;
+}
+
+.content-page {
+  display: flex;
+}
+
+.page-wrapper {
+  flex-grow: 1;
+  padding: 20px;
 }/*# sourceMappingURL=index.css.map */
